prover-ray/zkcdriver/testdata/synced/invalid/type_10.zkc
//error:10:20-21:unknown type alias
//error:6:8-9:unknown type alias
//error:6:17-18:unknown type alias
//error:7:11-12:unknown type alias
//error:12:2-3:return y possibly undefined
fn f(x:T) -> (y:T) {
    var t:S = 1
    //
    if t == 1 {
      y = x + 4 as T
    }
 }
